--- a/template/node12/user-defined/function/package.json
+++ b/template/node12/user-defined/function/package.json
@@ -7,6 +7,6 @@
       "test": "echo \"Error: no test specified\" && exit 0"
     },
     "keywords": [],
-    "author": "Fonoster",
+    "author": "Fonoster Team",
     "license": "MIT"
   }
