--- a/templates/node12/base/function/package.json
+++ b/templates/node12/base/function/package.json
@@ -7,6 +7,6 @@
       "test": "echo \"Error: no test specified\" && exit 0"
     },
     "keywords": [],
-    "author": "Fonoster",
+    "author": "Fonoste Inc",
     "license": "MIT"
   }
